# seria

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  error.rs  lib.rs  type_store.rs
src/gateway/: client.rs  config.rs  mod.rs
src/http/: client.rs  config.rs  endpoint.rs  mod.rs
src/models/: attachment.rs  bot.rs  channel.rs  embed.rs  event.rs  member.rs  message.rs  mod.rs  permission.rs  server.rs  user.rs
